adicionando o modal, finalizando o css e responsividade

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/medias.css">
+    <link rel="stylesheet" href="/newtab-projeto-modulo-2/assets/css/main.css">
+    <link rel="stylesheet" href="/newtab-projeto-modulo-2/assets/css/medias.css">
+    <link rel="stylesheet" href="/newtab-projeto-modulo-2/assets/css/modal.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,8 +17,8 @@
 <body>
     
     <header>
-        <div class="content" class="upper-menu">
-            <a href="index.html"><img class="logo" src="./assets/imgs/Ellipse 13.svg" alt="Logo"></a>
+        <div class="content">
+            <a href="/newtab-projeto-modulo-2/index.html"><img class="logo" src="/newtab-projeto-modulo-2/assets/imgs/logo.svg" alt="Logo"></a>
             <h1 class="title">Controle financeiro</h1>
             <nav id="nav-menu">
             </nav>
@@ -128,9 +129,19 @@
         </section>
     </main>
 
+    <div id="menu" class="modal-overlay">
+        <div class="modal-container">
+            <div class="modal-itens">
+                <img id="close" src="/newtab-projeto-modulo-2/assets/imgs/close.svg">   
+                <button>Cadastro de transaçoes</button>
+                <button>Limpar dados</button>
+            </div>
+        </div>
+    </div>
+
     <footer>
     </footer>
 
-    <script src="./assets/scripts/script.js"></script>
+    <script src="/newtab-projeto-modulo-2/assets/scripts/script.js"></script>
 </body>
 </html>
